--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,13 @@
 version: 2.1
 
 orbs:
-  unity: game-ci/unity@x.y
+  unity: game-ci/unity@1.7
 
 workflows:
   create-unity-activation-file:
     jobs:
       - unity/create-activation-file:
-          editor_version: 2022.1.11f1
+          editor_version: 2021.3.31f1
 
   build-unity-project:
     jobs:
