--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ workflows:
   create-unity-activation-file:
     jobs:
       - unity/create-activation-file:
-          editor_version: editor-ubuntu-2021.3.31f1-base-3.0.0
+          editor_version: 2021.3.31f1
 
   build-unity-project:
     jobs:
