--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,23 +6,23 @@ orbs:
 workflows:
   create-unity-activation-file:
     jobs:
-      - unity/create-activation-file:
-          editor_version: 2021.3.31f1
+      - unity/create-activation-file
+#          editor_version: 2021.3.31f1
 
-  build-unity-project:
-    jobs:
-      - unity/build:
-          name: 'build-webgl'
-          step-name: 'Build WebGL'
-          unity-license-var-name: 'UNITY_ENCODED_LICENSE'
-          unity-username-var-name: 'UNITY_USERNAME'
-          unity-password-var-name: 'UNITY_PASSWORD'
-          executor:
-            name: 'unity/ubuntu'
-            target_platform: 'linux-il2cpp'
-            editor_version: '2021.3.31f1'
-            resource_class: 'large'
-          project-path: '.'
-          build-target: WebGL
-          compress: false
-          context: unity
+#  build-unity-project:
+#    jobs:
+#      - unity/build:
+#          name: 'build-webgl'
+#          step-name: 'Build WebGL'
+#          unity-license-var-name: 'UNITY_ENCODED_LICENSE'
+#          unity-username-var-name: 'UNITY_USERNAME'
+#          unity-password-var-name: 'UNITY_PASSWORD'
+#          executor:
+#            name: 'unity/ubuntu'
+#            target_platform: 'linux-il2cpp'
+#            editor_version: '2021.3.31f1'
+#            resource_class: 'large'
+#          project-path: '.'
+#          build-target: WebGL
+#          compress: false
+#          context: unity
